# henqo-platform

./: .gitignore
scripts/: validate_schema.py
scripts/codegen/: gen_proto.sh
services/artifact-service/: pyproject.toml
services/decision-pkg-service/: pyproject.toml
services/design-service/: pyproject.toml
services/graph-service/: pyproject.toml
services/graph-service/src/graph_service/api/: handlers.py
services/graph-service/src/graph_service/domain/: state_machine.py
services/graph-service/src/graph_service/persistence/: store.py
services/graph-service/tests/unit/: test_handlers.py  test_state_machine.py
services/mfg-service/: pyproject.toml
services/mfg-service/src/mfg_service/: __init__.py
services/mfg-service/src/mfg_service/api/: __init__.py  handlers.py
services/mfg-service/src/mfg_service/domain/: __init__.py  dfm_rules.py  ics.py  mrs.py  tolerance_stack.py
services/mfg-service/tests/: __init__.py
services/mfg-service/tests/unit/: __init__.py  test_dfm_rules.py  test_handlers.py  test_mrs.py  test_tolerance_stack.py
services/requirements-service/: pyproject.toml
services/sim-job-service/: pyproject.toml
services/sim-job-service/src/sim_job_service/: __init__.py
services/sim-job-service/src/sim_job_service/adapters/: __init__.py  base.py  fenics.py  openfoam.py
services/sim-job-service/src/sim_job_service/api/: __init__.py  handlers.py
services/sim-job-service/src/sim_job_service/domain/: __init__.py  auto_validation.py  failure_tracker.py
services/sim-job-service/tests/unit/: test_auto_validation.py  test_failure_tracker.py  test_handlers.py
services/surrogate-service/: pyproject.toml
services/surrogate-service/src/surrogate_service/: __init__.py
services/surrogate-service/src/surrogate_service/api/: __init__.py  handlers.py
services/surrogate-service/src/surrogate_service/domain/: __init__.py  applicability.py  calibration.py  router.py  schema_check.py  trust_bundle.py
services/surrogate-service/src/surrogate_service/models/: __init__.py  base.py  registry.py
services/surrogate-service/tests/unit/: test_applicability.py  test_calibration.py  test_handlers.py  test_router.py  test_schema_check.py  test_trust_bundle.py
tests/e2e/: test_edf_full_workflow.py
(+34 files in other folders)
