[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "henqo-mfg-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mfg_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
