[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "henqo-surrogate-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "henqo-schema>=0.1.0",
    "henqo-graph-service>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=surrogate_service --cov-report=term-missing"

[tool.coverage.run]
source = ["surrogate_service"]

[tool.hatch.build.targets.wheel]
packages = ["src/surrogate_service"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"
